tests/ui/parser/macro/bad-macro-argument.rs
fn main() {
    let message = "world";
    println!("Hello, {}", message/); //~ ERROR expected expression
}
